--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "axios": "^0.18.0",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
-    "query-string": "^6.1.0",
+    "query-string": "~5.1.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
