--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "ajv": "^6.5.3",
     "antd": "^3.9.2",
     "axios": "^0.18.0",
+    "highcharts": "^6.2.0",
+    "highcharts-react-official": "^1.4.0",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "query-string": "~5.1.1",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
