--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "query-string": "~5.1.1",
     "react": "^16.5.1",
     "react-dom": "^16.6.0",
+    "react-jss": "^8.6.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-width": "^0.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
