--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "query-string": "~5.1.1",
     "react": "^16.5.1",
     "react-dom": "^16.6.0",
+    "react-helmet": "^5.2.0",
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.1",
     "react-router-dom": "^4.3.1",
