--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^5.2.0",
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.1",
+    "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-width": "^0.1.8"
