--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.22.2",
     "query-string": "~5.1.1",
     "react": "^16.5.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.7.2",
