--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.13.4",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
+    "chai": "^4.2.0",
     "highcharts": "^6.2.0",
     "highcharts-react-official": "^1.4.0",
     "history": "^4.7.2",
