experiment with diff tool

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
     "chai": "^4.2.0",
+    "diff2html": "^2.7.0",
     "highcharts": "^6.2.0",
     "highcharts-react-official": "^1.4.0",
     "history": "^4.7.2",
