--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
+    "react-highlight-words": "^0.16.0",
     "react-intl": "^2.7.2",
     "react-jss": "^8.6.1",
     "react-resizable": "^1.7.5",
