--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.5.3",
+    "@ant-design/compatible": "^1.0.2",
+    "@ant-design/icons": "^4.1.0",
+    "ajv": "^6.9.1",
     "antd": "^4.2.0",
     "axios": "^0.18.1",
     "base-64": "^0.1.0",
@@ -11,16 +13,17 @@
     "citation-js": "^0.4.5",
     "citeproc": "^2.1.222",
     "dataloader": "^1.4.0",
+    "dayjs": "^1.8.26",
     "diff2html": "^2.7.0",
     "highcharts": "^6.2.0",
     "highcharts-react-official": "^1.4.0",
     "history": "^4.7.2",
     "lodash": ">=4.6.2",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "query-string": "~5.1.1",
     "react": "^16.9.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.6.0",
+    "react-dom": "^16.9.0",
     "react-helmet": "^5.2.0",
     "react-highlight-words": "^0.16.0",
     "react-intl": "^2.7.2",
@@ -30,10 +33,14 @@
     "react-scripts": "1.1.5",
     "react-width": "^0.1.8"
   },
+  "resolutions": {
+    "moment": "2.24.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "node gitTag.js; react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
   }
 }
