--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.9.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.9.0",
+    "react-drag-listview": "^0.1.7",
     "react-helmet": "^5.2.0",
     "react-highlight-words": "^0.16.0",
     "react-intl": "^2.7.2",
