--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "node gitTag.js; react-scripts build; gzipper compress ./build",
+    "build": "node gitTag.js; react-scripts build; gzipper compress ./build ; gzipper compress --brotli --include js,css,html,txt,json  ./build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "preinstall": "npx npm-force-resolutions"
