parse markdown in metadata description

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dataloader": "^1.4.0",
     "dayjs": "^1.8.26",
     "diff2html": "^2.7.0",
+    "dompurify": "^2.2.7",
     "highcharts": "^6.2.0",
     "highcharts-react-official": "^1.4.0",
     "history": "^4.7.2",
     "lodash": ">=4.6.2",
+    "marked": "^2.0.3",
     "moment": "^2.24.0",
     "query-string": "~5.1.1",
     "react": "^16.9.0",
