--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "4.8.6",
     "axios": "^0.18.1",
     "base-64": "^0.1.0",
+    "csvtojson": "^2.0.10",
     "dataloader": "^1.4.0",
     "dayjs": "^1.8.26",
     "diff2html": "^2.7.0",
