--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "query-string": "~5.1.1",
     "react": "^16.9.0",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.9.0",
     "react-drag-listview": "^0.1.7",
     "react-helmet": "^5.2.0",
