--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": ">=4.6.2",
     "marked": "^2.0.3",
     "moment": "^2.24.0",
+    "papaparse": "^5.0.2",
     "p-queue": "^6.6.1",
     "query-string": "~5.1.1",
     "react": "^16.9.0",
