closes https://github.com/CatalogueOfLife/checklistbank/issues/1013 closes https://github.com/CatalogueOfLife/checklistbank/issues/1004

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "highcharts": "^9.1.2",
     "highcharts-react-official": "^3.0.0",
     "history": "^4.7.2",
+    "linkify-html": "^3.0.5",
+    "linkifyjs": "^3.0.5",
     "lodash": ">=4.6.2",
     "marked": "^2.0.3",
     "moment": "^2.24.0",
@@ -36,6 +38,7 @@
     "react-highlight-words": "^0.16.0",
     "react-intl": "^2.7.2",
     "react-jss": "^10.1.1",
+    "react-linkify": "^1.0.0-alpha",
     "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
