--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-csv": "^2.0.3",
     "react-dom": "^16.9.0",
     "react-drag-listview": "^0.1.7",
+    "react-ga4": "^1.4.1",
     "react-helmet": "^5.2.0",
     "react-highlight-words": "^0.16.0",
     "react-intl": "^2.7.2",
