--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "highcharts": "^9.1.2",
     "highcharts-react-official": "^3.0.0",
     "history": "^4.7.2",
+    "install": "^0.13.0",
     "linkify-html": "^3.0.5",
     "linkifyjs": "^3.0.5",
     "lodash": ">=4.6.2",
     "marked": "^2.0.3",
     "moment": "^2.24.0",
     "new-github-issue-url": "^1.0.0",
+    "npm": "^8.18.0",
     "p-queue": "^6.6.1",
     "papaparse": "^5.0.2",
     "query-string": "~5.1.1",
@@ -39,6 +41,7 @@
     "react-helmet": "^5.2.0",
     "react-highlight-words": "^0.16.0",
     "react-intl": "^2.7.2",
+    "react-json-print": "^0.1.3",
     "react-jss": "^10.1.1",
     "react-linkify": "^1.0.0-alpha",
     "react-resizable": "^1.7.5",
