--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-ga4": "^1.4.1",
     "react-helmet": "^5.2.0",
     "react-highlight-words": "^0.16.0",
+    "react-icons": "^4.4.0",
     "react-intl": "^2.7.2",
     "react-json-print": "^0.1.3",
     "react-jss": "^10.1.1",
