Replace excel download with classification param

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "liveServer.settings.port": 5501,
   "editor.formatOnSave": true,
-  "workbench.colorTheme": "Abyss"
+  "workbench.colorTheme": "Default Dark+"
 }
